[23.December 2008]
- tests: some tests broken by recent changes fixed
- entities/troll.rb, gfx/troll.png, monster test level TRLL: 
  new monster for caves 
  (instead of LivingStone, which needs some more improvements
  of Animation before it can be animated properly);
- programwalker.rb: lisp-like scripting for Troll and other monsters
  (I needed simple 'scripting language' with thin parser that serves commands
  on demand)
- viking.rb, bpvikingview.rb: Viking more friendly to tests

[22.December 2008]
- location.rb: SpriteManager#update removed, functionality moved to Location
- entities/smallstone.rb: small game object, will be used together with
  LivingStone
- new level Christmas2008/HappyLEnd
- new tileset: trunk of a tree with branches

[21.December 2008]
- entities/switch.rb: RD->RDoc;
  added new argument passed to @action: Switch instance itself
- Christmas2008/Climbin: metadata added to the map;
  ladders and associated switches implemented
- viking.rb: falls if ladder disappears;
  fixed error "viking starts climbing up when meeting ladder with 'down'
  button pressed"
- bottompanel.rb: fixed error "viking selection using a mouse doesn't affect
  portraits"

[19.December 2008]
- bottompanel.rb, bpvikingview.rb, viking.rb, inventory.rb:
  Fixed problem "VikingView doesn't update on life loss":
  VikingView is observer of both Viking and Inventory
- viking.rb: keep UP key pressed, viking will wait till he collides 
  with a ladder and start climbing it (current system "press UP to try 
  to climb" was uncomfortable for the player - at least for me :) )
- shielder.rb: shield disappears when Olaf is climbing or KO;
  fixed error "Olaf climbs slowly with shield over his head"
- shield.rb: Shield's position is determined according to Olaf's
  paint_rect, not collision_rect (looks better)
- location.rb: fixed error: objects were painted according to their rect,
  not collision_rect
- entities/boat.rb: boat is painted in front of the vikings (looks better)